--- a/tests.project
+++ b/tests.project
@@ -3,8 +3,8 @@
   <Description/>
   <Dependencies/>
   <VirtualDirectory Name="src">
-    <File Name="main.cpp"/>
     <File Name="types.h"/>
+    <File Name="unittests.cpp"/>
   </VirtualDirectory>
   <Dependencies Name="Debug">
     <Project Name="gtest"/>
